[BTAT-7901] back client details url changed

--- a/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
+++ b/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
@@ -26,7 +26,7 @@
 @changeClientLink = {
         <p id="change-client-text">
             <a id="change-client-link"
-            href="@controllers.routes.ChangeClientController.changeClient()">
+            href="@appConfig.manageVatUrl">
             @messages("common.agent.backToClient")</a>
         </p>
 }
