[BTAT-8262] Fixed ChangeRetunrFrequencyConfirmation finish button

--- a/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
+++ b/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
@@ -73,10 +73,18 @@
 
     }
 
+@if(user.isAgent) {
     <a  id="finish"
         href='@appConfig.manageVatUrl'
         class="button"
         role="button"
         type="submit">@messages("common.agent.backToClient")</a>
+} else {
+<a  id="finish"
+    href='@appConfig.manageVatUrl'
+    class="button"
+    role="button"
+    type="submit">@messages("common.finish")</a>
+}
 
 }
