--- a/app/views/errors/ErrorSummary.scala.html
+++ b/app/views/errors/ErrorSummary.scala.html
@@ -14,12 +14,29 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.play.views.html.helpers.{ErrorSummary => Summary}
-
-@this(summary: Summary)
+@this()
 
 @(heading: String, form: Form[_])(implicit messages: Messages)
 
 @if(form.hasErrors) {
-    @summary(messages(heading), form)
+
+<div class="flash error-summary@if(form.hasErrors) { error-summary--show}"
+     id="error-summary-display"
+     role="alert"
+     aria-labelledby="error-summary-heading"
+     tabindex="-1">
+ <h2 id="error-summary-heading" class="h3-heading">@messages(heading)</h2>
+ <ul class="js-error-summary-messages">
+  @form.errors.map { error =>
+  <li class="error-summary-list">
+   <a href="#@error.key"
+      id="@{error.key}-error-summary"
+      data-focuses="@{error.key}">
+    @messages(error.message, error.args: _*)
+   </a>
+  </li>
+  }
+ </ul>
+</div>
+
 }
