--- a/app/views/templates/inputs/RadioGroup.scala.html
+++ b/app/views/templates/inputs/RadioGroup.scala.html
@@ -14,8 +14,6 @@
  * limitations under the License.
  *@
 
-@import views.html.helper._
-
 @this()
 
 @(field: Field,
@@ -23,32 +21,38 @@
         question: String,
         additionalContent: Option[Html] = None)(implicit messages: Messages)
 
-@elements = @{ FieldElements(field.id, field, null, Map(), messages) }
+<div class="form-group" id="period-option">
+    <fieldset aria-describedby="form-hint@if(field.hasErrors){ form-error}">
 
-<div @if(elements.hasErrors){ class="form-field--error panel-border-narrow"}>
+        <div class="form-field@if(field.hasErrors){--error panel-border-narrow}">
 
-  <fieldset>
     <legend>
       <h1 id="page-heading" class="heading-large">@question</h1>
     </legend>
 
     @additionalContent.map { content => @content }
 
-    @elements.errors.map { error => <span class="error-message">@messages(error)</span> }
+    @field.errors.map { error =>
+        <span id="form-error" class="error-message">
+            <span class="visuallyhidden">@messages("common.error")</span>
+            @messages(error.message, error.args: _*)
+        </span>
+        }
 
     @choices.map { case (value, label) =>
 
-      @defining(s"${elements.field.name}-${value.toLowerCase}") { inputId =>
+      @defining(s"${field.name}-${value.toLowerCase}") { inputId =>
         <div class="multiple-choice">
           <input
           type="radio"
           id="@inputId"
-          name="@elements.field.name"
+          name="@field.name"
           value="@value"
             @field.value.filter( _ == value).map{_ => checked="checked"}/>
           <label for="@inputId">@label</label>
         </div>
       }
     }
-  </fieldset>
+        </div>
+    </fieldset>
 </div>
