--- a/app/views/GovUkWrapper.scala.html
+++ b/app/views/GovUkWrapper.scala.html
@@ -58,19 +58,22 @@
 }
 
 @scriptElement = {
+    <!--[if !IE]>-->
+    <script type="text/javascript" src="@appConfig.trackingConsentUrl"></script>
+    <!--<![endif]-->
     <script type="text/javascript" src=@routes.Assets.at("js/errorFocus.js?2")></script>
-    <script>
-        @if(showSignOut) {
-            window.GOVUK.timeoutDialog({
-              timeout: @appConfig.timeoutPeriod,
-              countdown: @appConfig.timeoutCountdown,
-              keepAliveUrl: '@{controllers.returnFrequency.routes.ChooseDatesController.show()}',
-              signOutUrl: '@{controllers.routes.SignOutController.signOut(feedbackOnSignOut = false)}'
-            });
-            var dialogOpen;
-        }
-    </script>
-    @scriptElem.map(x => x)
+        <script>
+            @if(showSignOut) {
+                window.GOVUK.timeoutDialog({
+                  timeout: @appConfig.timeoutPeriod,
+                  countdown: @appConfig.timeoutCountdown,
+                  keepAliveUrl: '@{controllers.returnFrequency.routes.ChooseDatesController.show()}',
+                  signOutUrl: '@{controllers.routes.SignOutController.signOut(feedbackOnSignOut = false)}'
+                });
+                var dialogOpen;
+            }
+        </script>
+        @scriptElem.map(x => x)
 }
 
 @headerNavLinks = {
