--- a/app/views/GovUkWrapper.scala.html
+++ b/app/views/GovUkWrapper.scala.html
@@ -17,11 +17,11 @@
 @import config.AppConfig
 @import models.auth.User
 @import play.twirl.api.HtmlFormat
-@import uk.gov.hmrc.play.views.html.layouts.{Head, HeaderNav, Footer, ServiceInfo, MainContentHeader, MainContent, FooterLinks}
+@import uk.gov.hmrc.play.views.html.layouts.{HeadWithTrackingConsent, HeaderNav, Footer, ServiceInfo, MainContentHeader, MainContent, FooterLinks}
 @import uk.gov.hmrc.play.views.html.helpers.ReportAProblemLink
 @import layouts.GovUkTemplate
 
-@this(head: Head,
+@this(headWithTrackingConsent: HeadWithTrackingConsent,
     headerNav: HeaderNav,
     footer: Footer,
     footerLinks: FooterLinks,
@@ -43,7 +43,7 @@
   serviceInfoContent: Html = HtmlFormat.empty,
   showSignOut: Boolean = true,
   scriptElem: Option[Html] = None,
-  user: Option[User[_]] = None)(implicit messages: Messages)
+  user: Option[User[_]] = None)(implicit request: Request[_], messages: Messages)
 
 @linkElem = {
   <link rel="stylesheet" type="text/css" href='@routes.Assets.at("css/palette.css")'>
@@ -51,16 +51,14 @@
 }
 
 @headContent = {
-    @head(
+    @headWithTrackingConsent(
       linkElem = Some(linkElem),
-      headScripts = None)
+      headScripts = None,
+      nonce = None)
     <meta name="format-detection" content="telephone=no" />
 }
 
 @scriptElement = {
-    <!--[if !IE]>-->
-    <script type="text/javascript" src="@appConfig.trackingConsentUrl"></script>
-    <!--<![endif]-->
     <script type="text/javascript" src=@routes.Assets.at("js/errorFocus.js?2")></script>
         <script>
             @if(showSignOut) {
