--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -28,7 +28,7 @@
   backLinkContent: Option[Html] = None,
   scriptElem: Option[Html] = None,
   showSignOut: Boolean = true,
-  user: Option[User[_]] = None)(mainContent: Html)(implicit messages: Messages)
+  user: Option[User[_]] = None)(mainContent: Html)(implicit request: Request[_], messages: Messages)
 
 @serviceInfoContent = {}
 
