--- a/app/testOnly/views/StubAgentClientLookup.scala.html
+++ b/app/testOnly/views/StubAgentClientLookup.scala.html
@@ -16,30 +16,28 @@
 
 @import uk.gov.hmrc.play.views.html.helpers.FormWithCSRF
 @import testOnly.models.StubAgentClientLookupModel
-@import views.html.templates.inputs.Text
 @import views.html.MainTemplate
 
-@this(mainTemplate: MainTemplate, text: Text, helperForm: FormWithCSRF)
+@this(mainTemplate: MainTemplate, helperForm: FormWithCSRF, govukInput: GovukInput, govukButton: GovukButton)
 
 @(form: Form[StubAgentClientLookupModel], redirectUrl: String)(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-@mainTemplate(title = "Stub Agent Client Lookup Frontend", bodyClasses = None, appConfig = appConfig) {
+@mainTemplate(pageTitle = "Stub Agent Client Lookup Frontend") {
 
-    @helperForm(action = testOnly.controllers.routes.StubAgentClientLookupController.post) {
+  @helperForm(action = testOnly.controllers.routes.StubAgentClientLookupController.post) {
+    <h2 class="govuk-heading-m">Client VRN</h2>
+        @govukInput(Input(
+            id = form("vrn").name,
+            name = form("vrn").name,
+            value = form("vrn").value,
+            classes = "govuk-input--width-10"
+        ))
 
-        <fieldset>
+    @govukButton(Button(
+        content = Text(messages("featureSwitch.submit"))
+    ))
 
-            <label><h2>Client VRN</h2></label>
-            @text(form("vrn"), "Client VRN")
-
-        </fieldset>
-
-        <div class="form-group">
-            <button class="button" type="submit" id="continue-button">Submit</button>
-        </div>
-
-        <label><h4>RedirectUrl:</h4></label>
-        <input type="text" name="redirectUrl" id="redirectUrl" value="@redirectUrl" style="width:100%;border:none;" readonly>
-
-    }
+    <label><h4 class="govuk-heading-s">RedirectUrl:</h4></label>
+    <input class="govuk-body" type="text" name="redirectUrl" id="redirectUrl" value="@redirectUrl" style="width:100%;border:none;" readonly>
+  }
 }
