--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -15,40 +15,107 @@
  *@
 
 @import config.AppConfig
+@import views.components.FooterLinks
+@import uk.gov.hmrc.govukfrontend.views.viewmodels.header.Header
+@import uk.gov.hmrc.play.views.html.layouts.TrackingConsentSnippet
 @import models.auth.User
-@import uk.gov.hmrc.play.views.html.layouts._
 
-@this(govUkWrapper: GovUkWrapper, article: Article, sidebar: Sidebar)
 
-@(title: String,
-  appConfig: AppConfig,
-  sidebarLinks: Option[Html] = None,
-  contentHeader: Option[Html] = None,
-  bodyClasses: Option[String] = None,
-  backLinkContent: Option[Html] = None,
-  scriptElem: Option[Html] = None,
+@this(govukLayout: GovukLayout,
+    govukHeader: GovukHeader,
+    govukPhaseBanner: GovukPhaseBanner,
+    hmrcReportTechnicalIssue: HmrcReportTechnicalIssue,
+    hmrcLanguageSelect: HmrcLanguageSelect,
+    hmrcTimeoutDialog: HmrcTimeoutDialog,
+    footerLinks: FooterLinks,
+    trackingConsentSnippet: TrackingConsentSnippet
+)
+
+@(pageTitle: String,
   showSignOut: Boolean = true,
-  user: Option[User[_]] = None)(mainContent: Html)(implicit request: Request[_], messages: Messages)
+  feedbackOnSignOut: Boolean = true,
+  user: Option[User[_]] = None)(mainContent: Html)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@serviceInfoContent = {}
 
-@sidebarContent = {
-  @if(sidebarLinks.isDefined) {
-    @sidebar(sidebarLinks.get, Some("sidebar"))
-  }
+@titleServiceName = @{
+    user.fold(messages("navTitle.vat"))(u => if(u.isAgent) messages("navTitle.agent") else messages("navTitle.nonAgent"))
 }
 
-@titleServiceName = {@{user.fold(messages("navTitle.vat"))(u => if(u.isAgent) messages("navTitle.agent") else messages("navTitle.nonAgent"))}}
 
-@govUkWrapper(appConfig = appConfig,
-  title = messages("common.pageTitle", title, titleServiceName),
-  backLinkContent = backLinkContent,
-  bodyClasses = bodyClasses,
-  sidebar = sidebarContent,
-  contentHeader = contentHeader,
-  mainBody = article(mainContent),
-  serviceInfoContent = serviceInfoContent,
-  scriptElem = scriptElem,
-  showSignOut = showSignOut,
-  user = user
-)
+@scripts = {
+    <script src='@routes.Assets.at("lib/govuk-frontend/govuk/all.js")'></script>
+    <script src='@routes.Assets.at("lib/hmrc-frontend/hmrc/all.js")'></script>
+
+    <script>window.GOVUKFrontend.initAll();</script>
+    <script>window.HMRCFrontend.initAll();</script>
+}
+
+@phaseBannerContent = {
+    @messages("feedback.before")
+    <a id="beta-banner-feedback" class="govuk-link" href="@appConfig.betaFeedbackUrl">
+      @messages("feedback.link")</a>
+    @messages("feedback.after")
+}
+
+@beforeContentHtml = {
+  @govukPhaseBanner(PhaseBanner(
+    tag = Some(Tag(content = Text(messages("banner.phaseName")))),
+    content = HtmlContent(phaseBannerContent)
+  ))
+  @hmrcLanguageSelect(LanguageSelect(
+    language = if (messages.lang.language == "en") En else Cy,
+    languageLinks =
+        En -> appConfig.routeToSwitchLanguage("english").url,
+        Cy -> appConfig.routeToSwitchLanguage("cymraeg").url
+  ))
+}
+
+@head = {
+@trackingConsentSnippet(nonce = None)
+<link rel="stylesheet" type="text/css" href='@routes.Assets.at("stylesheets/application.css")' media="all">
+
+    @if(showSignOut) {
+        @hmrcTimeoutDialog(TimeoutDialog(
+         timeout = Some(appConfig.timeoutPeriod),
+         countdown = Some(appConfig.timeoutCountdown),
+         signOutUrl = Some(routes.SignOutController.signOut(feedbackOnSignOut = false).url),
+         keepAliveUrl = Some("#"),
+         signOutButtonText = Some(messages("base.signOut"))
+    ))
+    }
+}
+
+@header = @{
+    govukHeader(Header(
+        serviceName = Some(titleServiceName),
+        navigation =
+         if(showSignOut)
+              Some(Seq(HeaderNavigation(
+                text = Some(messages("base.signOut")),
+                href = Some(routes.SignOutController.signOut(feedbackOnSignOut).url)
+              )))
+        else None
+    ))
+}
+
+@getHelpHtml = @{hmrcReportTechnicalIssue(ReportTechnicalIssue(
+    serviceCode = appConfig.contactFormServiceIdentifier,
+    language = if (messages.lang.code == "cy") Cy else En
+    ))
+}
+
+@fullContent = {
+    <div id="content" class="govuk-!-margin-bottom-6">
+        @mainContent
+    </div>
+    @getHelpHtml
+}
+
+@govukLayout(
+    pageTitle = Some(messages("common.pageTitle", pageTitle, titleServiceName)),
+    headBlock = Some(head),
+    headerBlock = Some(header),
+    beforeContentBlock = Some(beforeContentHtml),
+    footerItems = footerLinks.items,
+    scriptsBlock = Some(scripts)
+    )(fullContent)
