--- a/app/views/errors/UnauthorisedAgent.scala.html
+++ b/app/views/errors/UnauthorisedAgent.scala.html
@@ -16,21 +16,22 @@
 
 @import views.html.MainTemplate
 
-@this(mainTemplate: MainTemplate)
+@this(mainTemplate: MainTemplate, govukButton: GovukButton)
 
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-@mainTemplate(title = messages("unauthorised_agent.title"), bodyClasses = None, appConfig = appConfig) {
+@mainTemplate(pageTitle = messages("unauthorised_agent.title")) {
 
-    <h1>@messages("unauthorised_agent.title")</h1>
+    <h1 class="govuk-heading-l">@messages("unauthorised_agent.title")</h1>
 
-    <p>
+    <p class="govuk-body">
         @messages("unauthorised_agent.useThisService")
-        <a href="@appConfig.govUkGuidanceAgentServices">@messages("unauthorised_agent.setUpAccount")</a>@messages("common.fullStop")
+        <a class= "govuk-link" href="@appConfig.govUkGuidanceAgentServices">
+            @messages("unauthorised_agent.setUpAccount")</a>@messages("common.fullStop")
     </p>
 
-    <a class="button" role="button" href="@controllers.routes.SignOutController.signOut(feedbackOnSignOut = false)">
-        @messages("common.signOut")
-    </a>
-
+    @govukButton(Button(
+    href = Some(routes.SignOutController.signOut(feedbackOnSignOut = false).url),
+    content = Text(messages("common.signOut"))
+    ))
 }
