--- a/app/views/errors/UnauthorisedNonAgent.scala.html
+++ b/app/views/errors/UnauthorisedNonAgent.scala.html
@@ -16,19 +16,23 @@
 
 @import views.html.MainTemplate
 
-@this(mainTemplate: MainTemplate)
+@this(mainTemplate: MainTemplate, govukButton: GovukButton)
 
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-@mainTemplate(title = messages("unauthorised_non_agent.title"), bodyClasses = None, appConfig = appConfig) {
+@mainTemplate(pageTitle = messages("unauthorised_non_agent.title")) {
 
-    <h1>@messages("unauthorised_non_agent.heading")</h1>
+    <h1 class="govuk-heading-l">@messages("unauthorised_non_agent.heading")</h1>
 
-    <p>@messages("unauthorised_non_agent.text")
-        <a href="@appConfig.govUkGuidanceMtdVat">@messages("unauthorised_non_agent.link")</a>@messages("common.fullStop")
+    <p class="govuk-body">
+        @messages("unauthorised_non_agent.text")
+        <a class= "govuk-link" href="@appConfig.govUkGuidanceMtdVat">
+            @messages("unauthorised_non_agent.link")</a>@messages("common.fullStop")
     </p>
 
-    <a class="button" role="button" href="@controllers.routes.SignOutController.signOut(feedbackOnSignOut = false)">
-        @messages("common.signOut")
-    </a>
+
+    @govukButton(Button(
+    href = Some(routes.SignOutController.signOut(feedbackOnSignOut = false).url),
+    content = Text(messages("common.signOut"))
+    ))
 }
