--- a/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
+++ b/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
@@ -18,33 +18,33 @@
 @import models.auth.User
 @import models.contactPreferences.ContactPreference.{digital, paper}
 @import views.html.MainTemplate
+@import config.AppConfig
 
-@this(mainTemplate: MainTemplate, updateClient: UpdateClient)
+@this(mainTemplate: MainTemplate, updateClient: UpdateClient, govukButton: GovukButton)
 
 @(clientName: Option[String] = None,
   agentEmail: Option[String] = None,
   contactPref: Option[String] = None,
-  emailVerified: Boolean = false)(implicit user : User[_], messages: Messages, appConfig: config.AppConfig)
+  emailVerified: Boolean = false)(implicit user : User[_], messages: Messages, appConfig: AppConfig)
 
 
 @mainTemplate(
-  title = messages("received_frequency.title"),
-  appConfig = appConfig,
+  pageTitle = messages("received_frequency.title"),
   user = Some(user)
 ) {
 
-  <div class="govuk-box-highlight">
-      <h1 id="page-heading" class="heading-xlarge">@messages("received_frequency.heading")</h1>
+  <div class="govuk-panel govuk-panel--confirmation">
+      <h1 id="page-heading" class="govuk-panel__title">@messages("received_frequency.heading")</h1>
   </div>
 
-  <h2 class="heading-medium">@messages("received_frequency.subheading")</h2>
+  <h2 class="govuk-heading-m">@messages("received_frequency.subheading")</h2>
 
   @if(user.isAgent){
 
     @agentEmail match {
 
       case Some(email) => {
-          <p>@messages("received_frequency.agent.bulkPaper-p1-1")
+          <p class="govuk-body">@messages("received_frequency.agent.bulkPaper-p1-1")
             <strong class="bold">@email</strong>
             @messages("received_frequency.agent.bulkPaper-p1-2")</p>
           @updateClient(clientName)
@@ -58,25 +58,23 @@
   } else {
 
     @contactPref match {
-      case Some(`digital`) => {<p>@messages(if(emailVerified){"contact_preference.email"}else{"contact_preference.digital"})</p>}
-      case Some(`paper`) => {<p>@messages("contact_preference.paper")</p>}
-      case _ => {<p>@messages("contact_preference.contactPrefError")</p>}
+      case Some(`digital`) => {<p class="govuk-body">@messages(if(emailVerified){"contact_preference.email"}else{"contact_preference.digital"})</p>}
+      case Some(`paper`) => {<p class="govuk-body">@messages("contact_preference.paper")</p>}
+      case _ => {<p class="govuk-body">@messages("contact_preference.contactPrefError")</p>}
     }
   }
 
-  <p>@messages("received_frequency.newDates")</p>
+  <p class="govuk-body">@messages("received_frequency.newDates")</p>
 
   @if(user.isAgent) {
-    <a  id="finish"
-        href='@appConfig.manageVatUrl'
-        class="button"
-        role="button"
-        type="submit">@messages("common.agent.backToClient")</a>
+    @govukButton(Button(
+    content = Text(messages("common.agent.backToClient")),
+    href = Some(appConfig.manageVatUrl)
+    ))
   } else {
-    <a  id="finish"
-        href='@appConfig.manageVatUrl'
-        class="button"
-        role="button"
-        type="submit">@messages("common.finish")</a>
+    @govukButton(Button(
+    content = Text(messages("common.finish")),
+    href = Some(appConfig.manageVatUrl)
+    ))
   }
 }
