--- a/app/views/returnFrequency/ChooseDates.scala.html
+++ b/app/views/returnFrequency/ChooseDates.scala.html
@@ -15,61 +15,92 @@
  *@
 
 @import models.returnFrequency.ReturnDatesModel
-@import templates.inputs.RadioGroup
-@import views.html.errors.ErrorSummary
 @import models.returnFrequency._
 @import models.auth.User
 @import views.html.MainTemplate
 @import uk.gov.hmrc.play.views.html.helpers.FormWithCSRF
+@import config.AppConfig
 
-@this(mainTemplate: MainTemplate, errorSummary: ErrorSummary, radioGroup: RadioGroup, helpersForm: FormWithCSRF)
+@this(mainTemplate: MainTemplate,
+      govukBackLink: GovukBackLink,
+      govukRadios: GovukRadios,
+      govukErrorSummary: GovukErrorSummary,
+      govukButton: GovukButton,
+      formWithCSRF: FormWithCSRF)
 
-@(form: Form[ReturnDatesModel], current: ReturnPeriod)(implicit user : User[_], messages: Messages, appConfig: config.AppConfig)
+@(form: Form[ReturnDatesModel], current: ReturnPeriod)(implicit user : User[_], messages: Messages, appConfig: AppConfig)
 
-
-@additionalContent = {
-    @if(current.id.equals("Annually")){
-        <p id="form-hint" class="form-hint">
-            <span id="currently-set-text">@messages("return_frequency.currentAnnual")</span>
-        </p>
+@formHint = @{
+    if(current.id.equals("Annually")){
+      messages("return_frequency.currentAnnual")
     } else {
-        <p id="form-hint" class="form-hint">
-            <span id="currently-set-text">@messages("return_frequency.current")</span>
-            <span id="currently-set-period">@messages(s"return_frequency.${current.id}")@messages("common.fullStop")</span>
-        </p>
+      messages("return_frequency.current") + " " +
+      messages(s"return_frequency.${current.id}") + messages("common.fullStop")
     }
 }
 
-@backLink = {
-  <a class="link-back" href='@appConfig.manageVatUrl'>@messages("base.back")</a>
+@availableOptions = @{Seq(Jan, Feb, Mar, Monthly).filterNot(_ == current)}
+
+@conditionalRevealHtml(value: String) = {
+    <p class="govuk-hint">
+        @(current, value) match {
+            case (Monthly, _) | (_, "Monthly") => {@messages("return_frequency.changeAtEndOfMonth")}
+            case _ => {@messages("return_frequency.changeAtEndOfQuarter")}
+        }
+    </p>
 }
 
 @mainTemplate(
-  title = if(form.errors.nonEmpty) messages("common.error.prefixTitle", messages("return_frequency.title")) else messages("return_frequency.title"),
-  appConfig = appConfig,
-  backLinkContent = Some(backLink),
+  pageTitle =
+    if(form.errors.nonEmpty) messages("common.error.prefixTitle",
+    messages("return_frequency.title")) else messages("return_frequency.title"),
   user = Some(user)) {
 
-  @errorSummary("common.errorSummary.heading", form)
+  @govukBackLink(BackLink(
+    href = appConfig.manageVatUrl,
+    content = Text(messages("base.back"))
+  ))
 
-  @helpersForm(action = controllers.returnFrequency.routes.ChooseDatesController.submit()) {
+  @if(form.hasErrors) {
+    @govukErrorSummary(ErrorSummary(
+        title = Text(messages("common.errorSummary.heading")),
+        errorList = form.errors.map { error =>
+          ErrorLink(
+            href = availableOptions.lift(0).map(option => s"#return_frequency.${option.id}"),
+            content = Text(messages(error.message))
+            )
+        }
+    ))
+  }
 
-          @radioGroup(
-              field = form("period-option"),
-              choices = Seq(Jan, Feb, Mar, Monthly).filterNot(_ == current).map { option =>
-                (option.id, messages(s"return_frequency.${option.id}"))
-              },
-              question = messages("return_frequency.title"),
-              currentReturnPeriod = current,
-              additionalContent = Some(additionalContent)
-          )
+  @formWithCSRF(action = controllers.returnFrequency.routes.ChooseDatesController.submit()) {
+    @govukRadios(Radios(
+        idPrefix = Some(form("period-option").id),
+        name = "period-option",
+        hint = Some(Hint(content = Text(formHint))),
+        fieldset = Some(Fieldset(
+            legend = Some(Legend(
+                content = Text(messages("return_frequency.title")),
+                isPageHeading = true,
+                classes = "govuk-fieldset__legend--l"
+            ))
+        )),
 
-      <button
-          class="button"
-          type ="submit"
-          id="continue">
-          @messages("common.continue")
-      </button>
+        items = availableOptions.map { option =>
+          RadioItem(
+            content = Text(messages(s"return_frequency.${option.id}")),
+            value = Some(option.id),
+            conditionalHtml = Some(conditionalRevealHtml(option.id)),
+            checked = form("period-option").value.contains(option.id)
+            )
+        },
+        errorMessage = form("period-option").error.map { err =>
+          ErrorMessage(content = Text(messages(err.message, err.args: _*)))
+        }
+    ))
 
+    @govukButton(Button(
+    content = Text(messages("common.continue"))
+    ))
   }
 }
