--- a/app/views/templates/ErrorTemplate.scala.html
+++ b/app/views/templates/ErrorTemplate.scala.html
@@ -15,18 +15,12 @@
  *@
 
 @import config.AppConfig
-@import views.html.GovUkWrapper
 
-@this(hmrcGovUkWrapper: GovUkWrapper)
+@this(mainTemplate: MainTemplate)
 
 @(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
- @contentHeader = {
-  <h1>@messages(heading)</h1>
+@mainTemplate(pageTitle = messages(pageTitle)) {
+ <h1 class="govuk-heading-xl">@messages(heading)</h1>
+ <p class="govuk-body">@messages(message)</p>
 }
-
- @mainContent = {
-  <p>@messages(message)</p>
-}
-
- @hmrcGovUkWrapper(appConfig = appConfig, title = messages(pageTitle), contentHeader = Some(contentHeader), mainBody = mainContent)
