[BTAT-8831] Made changes to AuthPredicate and model and started updating tests

--- a/app/testOnly/views/StubAgentClientUnauth.scala.html
+++ b/app/testOnly/views/StubAgentClientUnauth.scala.html
@@ -19,7 +19,7 @@
 
 @this(mainTemplate: MainTemplate, govukButton: GovukButton)
 
-@(redirectUrl: String)(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
+@(redirectUrl: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @mainTemplate(pageTitle = "Stub Agent Client Lookup Frontend - Unauthorised") {
 
