--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import config.AppConfig
-@import views.components.FooterLinks
+@import uk.gov.hmrc.hmrcfrontend.views.html.helpers._
 @import uk.gov.hmrc.govukfrontend.views.viewmodels.header.Header
 @import uk.gov.hmrc.play.views.html.layouts.TrackingConsentSnippet
 @import models.auth.User
@@ -27,7 +27,7 @@
     hmrcReportTechnicalIssue: HmrcReportTechnicalIssue,
     hmrcLanguageSelect: HmrcLanguageSelect,
     hmrcTimeoutDialog: HmrcTimeoutDialog,
-    footerLinks: FooterLinks,
+    hmrcStandardFooter: HmrcStandardFooter,
     trackingConsentSnippet: TrackingConsentSnippet
 )
 
@@ -116,6 +116,6 @@
     headBlock = Some(head),
     headerBlock = Some(header),
     beforeContentBlock = Some(beforeContentHtml),
-    footerItems = footerLinks.items,
+    footerBlock = Some(hmrcStandardFooter(accessibilityStatementUrl = Some(appConfig.accessibilityReportUrl))),
     scriptsBlock = Some(scripts)
     )(fullContent)
