[BTAT-9011] Updated CSS to fix menu toggle issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,10 @@ $hmrc-assets-path: "/vat-through-software/account/returns/assets/lib/hmrc-fronte
   pointer-events: none;
   cursor: default;
 }
+
+.js-enabled .govuk-header__menu-button {
+  display: none;
+}
+.js-enabled .govuk-header__navigation {
+  display: block;
+}
