--- a/app/views/errors/UnauthorisedAgent.scala.html
+++ b/app/views/errors/UnauthorisedAgent.scala.html
@@ -32,6 +32,6 @@
 
     @govukButton(Button(
     href = Some(routes.SignOutController.signOut(feedbackOnSignOut = false).url),
-    content = Text(messages("common.signOut"))
+    content = Text(messages("base.signOut"))
     ))
 }
