--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -104,6 +104,6 @@
   headBlock = Some(head),
   headerBlock = Some(header),
   beforeContentBlock = Some(beforeContentHtml),
-  footerBlock = Some(hmrcStandardFooter(accessibilityStatementUrl = Some(appConfig.accessibilityReportUrl))),
+  footerBlock = Some(hmrcStandardFooter()),
   scriptsBlock = Some(scripts)
 )(fullContent)
