BTAT-10085 update to 2.8.8

--- a/app/views/returnFrequency/ChooseDates.scala.html
+++ b/app/views/returnFrequency/ChooseDates.scala.html
@@ -75,7 +75,7 @@
     ))
   }
 
-  @formWithCSRF(action = controllers.returnFrequency.routes.ChooseDatesController.submit()) {
+  @formWithCSRF(action = controllers.returnFrequency.routes.ChooseDatesController.submit) {
     @govukRadios(Radios(
       idPrefix = Some(form("period-option").id),
       name = "period-option",
