--- a/app/testOnly/views/FeatureSwitch.scala.html
+++ b/app/testOnly/views/FeatureSwitch.scala.html
@@ -22,7 +22,7 @@
 
 @(form: Form[FeatureSwitchModel])(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-@mainTemplate(pageTitle = messages("featureSwitch.title")) {
+@mainTemplate(pageTitle = messages("Feature switches")) {
 
   @helperForm(action = testOnly.controllers.routes.FeatureSwitchController.submitFeatureSwitch) {
 
@@ -45,7 +45,7 @@
     )
 ))
     @govukButton(Button(
-    content = Text(messages("featureSwitch.submit"))
+    content = Text(messages("Submit"))
     ))
  }
 }
