--- a/app/testOnly/views/StubAgentClientLookup.scala.html
+++ b/app/testOnly/views/StubAgentClientLookup.scala.html
@@ -33,7 +33,7 @@
         ))
 
     @govukButton(Button(
-        content = Text(messages("featureSwitch.submit"))
+        content = Text(messages("Submit"))
     ))
 
     <label><h4 class="govuk-heading-s">RedirectUrl:</h4></label>
