BTAT-11221 Dependency update

--- a/app/views/returnFrequency/ConfirmDates.scala.html
+++ b/app/views/returnFrequency/ConfirmDates.scala.html
@@ -60,7 +60,7 @@
   @form(action = controllers.returnFrequency.routes.ConfirmVatDatesController.submit) {
     @govukButton(Button(
       content = Text(messages("common.continue")),
-      preventDoubleClick = true
+      preventDoubleClick = Some(true)
     ))
   }
 }
