--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -18,6 +18,7 @@
 @import uk.gov.hmrc.hmrcfrontend.views.html.helpers._
 @import models.auth.User
 @import utils.ServiceUrl
+@import views.html.helper.CSPNonce
 
 @this(govukLayout: GovukLayout,
       govukHeader: GovukHeader,
@@ -41,11 +42,13 @@
 }
 
 @scripts = {
-  <script src='@routes.Assets.at("lib/govuk-frontend/govuk/all.js")'></script>
-  <script src='@routes.Assets.at("lib/hmrc-frontend/hmrc/all.js")'></script>
+    <script @{CSPNonce.attr} type="module" src='@routes.Assets.at("lib/hmrc-frontend/hmrc/all.js")'></script>
 
-  <script>window.GOVUKFrontend.initAll();</script>
-  <script>window.HMRCFrontend.initAll();</script>
+    <script @{CSPNonce.attr} type="module">
+            import { initAll } from '@routes.Assets.at("lib/govuk-frontend/dist/govuk/govuk-frontend.min.js")'
+            initAll()
+    </script>
+  <script @{CSPNonce.attr} type="module">window.HMRCFrontend.initAll();</script>
 }
 
 @beforeContentHtml = {
