--- a/app/views/errors/UnauthorisedNonAgent.scala.html
+++ b/app/views/errors/UnauthorisedNonAgent.scala.html
@@ -14,13 +14,20 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.hmrcfrontend.views.html.components._
 @import views.html.MainTemplate
 
-@this(mainTemplate: MainTemplate, govukButton: GovukButton)
+@this(mainTemplate: MainTemplate,
+      hmrcUserResearchBanner : HmrcUserResearchBanner,
+      govukButton: GovukButton)
 
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
 @mainTemplate(pageTitle = messages("unauthorised_non_agent.title")) {
+
+    @hmrcUserResearchBanner(UserResearchBanner(
+        url = "https://www.gov.uk/government/organisations/hm-revenue-customs"
+    ))
 
     <h1 class="govuk-heading-l">@messages("unauthorised_non_agent.heading")</h1>
 
