--- a/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
+++ b/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
@@ -14,13 +14,18 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.hmrcfrontend.views.html.components._
 @import views.html.templates.UpdateClient
 @import models.auth.User
 @import models.contactPreferences.ContactPreference.{digital, paper}
 @import views.html.MainTemplate
 @import config.AppConfig
 
-@this(mainTemplate: MainTemplate, updateClient: UpdateClient, govukButton: GovukButton)
+@this(mainTemplate: MainTemplate,
+      hmrcUserResearchBanner : HmrcUserResearchBanner,
+      updateClient: UpdateClient,
+      govukButton: GovukButton
+)
 
 @(clientName: Option[String] = None,
   agentEmail: Option[String] = None,
@@ -32,6 +37,11 @@
   pageTitle = messages("received_frequency.title"),
   user = Some(user)
 ) {
+
+    @hmrcUserResearchBanner(UserResearchBanner(
+        url = "https://www.gov.uk/government/organisations/hm-revenue-customs",
+        hideCloseButton = true
+    ))
 
   <div class="govuk-panel govuk-panel--confirmation">
       <h1 id="page-heading" class="govuk-panel__title">@messages("received_frequency.heading")</h1>
